<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/quantity_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:text="@string/quantity_word"
        android:textAllCaps="true"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="16sp" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/minus"
        android:layout_below="@id/quantity_word"
        android:backgroundTint="@android:color/tertiary_text_dark"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="decrement"/>

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantity_word"
        android:layout_toRightOf="@id/minus_button"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/quantity_text"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/plus_button"
        android:layout_below="@id/quantity_word"
        android:layout_toRightOf="@id/quantity_text_view"
        android:backgroundTint="@android:color/tertiary_text_dark"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="increment"/>

    <TextView
        android:id="@+id/price_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/minus_button"
        android:layout_marginBottom="16dp"
        android:text="@string/price_word"
        android:textAllCaps="true"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_word"
        android:layout_marginBottom="16dp"
        android:text="@string/price_text"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_text_view"
        android:backgroundTint="@android:color/tertiary_text_dark"
        android:text="@string/button_text"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:onClick="submitOrder"/>


</RelativeLayout>